--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "Revisao-DevClub",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
+  "scripts": {
+    "dev": "nodemon"
+  },
   "license": "MIT",
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "nodemon": "^3.1.9",
     "sucrase": "^3.35.0"
+  },
+  "dependencies": {
+    "express": "^5.1.0"
   }
 }
